Files and database updated

--- a/assets/css/admin/login.css
+++ b/assets/css/admin/login.css
@@ -44,8 +44,8 @@ a {
 
 button {
     border-radius: 20px;
-    border: 1px solid #FF4B2B;
-    background-color: #FF4B2B;
+    border: 1px solid #2d00f3;
+    background-color: #2d00f3;
     color: #FFFFFF;
     font-size: 12px;
     font-weight: bold;
@@ -158,9 +158,10 @@ input {
 }
 
 .overlay {
-    background: #FF416C;
-    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-    background: linear-gradient(to right, #FF4B2B, #FF416C);
+    /* background: #FF416C; */
+    /* background: -webkit-linear-gradient(to right, #2d00f3, #FF416C); */
+    /* background: linear-gradient(to right, #2d00f3, #FF416C); */
+    background-image: radial-gradient(circle, #300dc7, #5813cc, #751bd1, #8e24d5, #a52fda, #8d57ed, #7472f9, #5e88ff, #00a8ff, #00c3ff, #00dbff, #03f0fb);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
