--- a/assets/css/admin/main.css
+++ b/assets/css/admin/main.css
@@ -1,48 +1,63 @@
-body{
+body {
     font-size: 0.9rem !important;
 }
+
 body p {
     font-size: 0.9rem !important;
 }
+
 body div {
     font-size: 0.9rem !important;
 }
+
 body legend {
     font-size: 0.8rem !important;
 }
+
 body strong {
     font-size: 0.7rem !important;
 }
+
 body input {
     font-size: 13px !important;
 }
+
 body span {
     font-size: 13px !important;
 }
+
 body table {
     font-size: 13px !important;
 }
+
 body table thead {
     font-size: 0.7rem !important;
 }
+
 body table tbody {
     font-size: 0.7rem !important;
 }
+
 body table tbody tr {
     font-size: 0.7rem !important;
 }
+
 body table tbody tr td {
     font-size: 0.7rem !important;
 }
+
 body table thead tr {
     font-size: 0.7rem !important;
 }
+
 body table thead tr td {
     font-size: 0.7rem !important;
 }
+
 .card {
     border-radius: 12px !important;
 }
+
 .bgGray {
     background-color: #eee;
 }
@@ -55,14 +70,12 @@ input:-moz-autofill {
     background-color: #FAFFBD !important;
 }
 
-#example thead tr th
-{
+#example thead tr th {
     cursor: pointer;
 }
 
-thead
-{
-    background: #FF5637 !important;
+thead {
+    background: #2d00f3 !important;
     color: #fff !important;
 }
 
@@ -186,29 +199,27 @@ thead
     }
 }
 
-.chat_user_items
-{
-    display: flex;
-    align-items: center;
-}
-.chat_user_items img
-{
-    width: 10%;
-    margin-right: 5px;
-}
-#chat_history_card .card-header img
-{
-    width: 10%;
-    margin-right: 5px;
-}
-#chat_history_card .card-header
-{
+.chat_user_items {
     display: flex;
     align-items: center;
 }
 
-#chat_card_body
-{
+.chat_user_items img {
+    width: 10%;
+    margin-right: 5px;
+}
+
+#chat_history_card .card-header img {
+    width: 10%;
+    margin-right: 5px;
+}
+
+#chat_history_card .card-header {
+    display: flex;
+    align-items: center;
+}
+
+#chat_card_body {
     background: rgb(173 255 176 / 30%);
 }
 
@@ -232,25 +243,29 @@ thead
 }
 
 #msg_file_upload {
-    visibility: hidden; 
-    display:none;
+    visibility: hidden;
+    display: none;
 }
 
 .chat_card_body {
-    height: 410px; 
+    height: 410px;
     overflow-y: scroll;
 }
+
 #chat_history_card {
     display: none;
 }
-.user_list_card_body{
+
+.user_list_card_body {
     height: 460px;
     overflow-y: scroll;
 }
+
 .chat_date_time {
     font-size: 13px;
     text-align: right;
 }
+
 #msg_loader {
     margin-right: 11px !important;
     margin-top: 11px !important;
@@ -302,79 +317,76 @@ thead
     }
 }
 
-#attendance_report_row .table-responsive
-{
+#attendance_report_row .table-responsive {
     /* height: 400px; */
     overflow-y: scroll;
 }
-#attendance_report_row .table-responsive thead
-{
-    position: sticky;
-    top: 0;
-    z-index: 2;
-}
-#attendance_report_row .table-responsive thead tr
-{
-    position: sticky;
-    top: 0;
-    z-index: 2;
-}
-#list_attendance_row .table-responsive
-{
-    /* height: 400px; */
-    overflow-y: scroll;
-}
-#list_attendance_row .table-responsive thead
-{
-    position: sticky;
-    top: 0;
-    z-index: 2;
-}
-#list_attendance_row .table-responsive thead tr
-{
+
+#attendance_report_row .table-responsive thead {
     position: sticky;
     top: 0;
     z-index: 2;
 }
 
-.leave_matter
-{
+#attendance_report_row .table-responsive thead tr {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+
+#list_attendance_row .table-responsive {
+    /* height: 400px; */
+    overflow-y: scroll;
+}
+
+#list_attendance_row .table-responsive thead {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+
+#list_attendance_row .table-responsive thead tr {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+
+.leave_matter {
     border: solid 1px;
     border-radius: 10px;
 }
+
 #chat_history_card a:hover {
     text-decoration: underline !important;
     cursor: pointer;
 }
 
-#sidebarCollapse
-{
-    background: #FF5637 !important;
+#sidebarCollapse {
+    background: #2d00f3 !important;
     color: #fff !important;
 }
 
-.custom_btn
-{
-    background: #FF5637 !important;
+.custom_btn {
+    background: #2d00f3 !important;
     color: #fff !important;
-    border: solid 1px #FF5637;
+    border: solid 1px #2d00f3;
 }
-.custom_btn:hover
-{
-    color: #FF5637 !important;
+
+.custom_btn:hover {
+    color: #2d00f3 !important;
     background: #fff !important;
-    border: solid 1px #FF5637;
+    border: solid 1px #2d00f3;
 }
 
 .dc_list_table tbody tr td p {
     font-size: 12px !important;
 }
-#myInput
-{
+
+#myInput {
     margin-top: 15px;
 }
-#example_filter label input
-{
+
+#example_filter label input {
     border-radius: 20px;
     padding: 4px;
     border-color: #28a745;
@@ -384,8 +396,9 @@ thead
     background-position: right calc(.375em + .1875rem) center;
     background-size: calc(.75em + .375rem) calc(.75em + .375rem);
 }
-#business_phone, #myInput
-{
+
+#business_phone,
+#myInput {
     border-radius: 20px;
     padding: 19px;
     border-color: #28a745;
@@ -396,8 +409,7 @@ thead
     background-size: calc(.75em + .375rem) calc(.75em + .375rem);
 }
 
-#example thead tr th
-{
+#example thead tr th {
     padding-right: 1.9rem !important;
     background-image: url("../../images/sorticon.png");
     background-repeat: no-repeat;
@@ -405,27 +417,37 @@ thead
     background-size: calc(1.4em + 0.375rem) calc(0.70em + 0.385rem);
 }
 
-.input-group-text
-{
+.input-group-text {
     background: none !important;
     border: none !important;
     font-size: 20px !important;
 }
 
-#msg_txt
-{
+#msg_txt {
     padding: 20px;
     border: solid 1px #259d41;
     border-radius: 20px;
 }
 
+
 /* .search-bar { */
-    /* max-width: 400px;
+
+
+/* max-width: 400px;
     margin: 20px 50px; */
-    /* border: none; */
-    /* padding: 17px; */
-    /* position: relative; */
+
+
+/* border: none; */
+
+
+/* padding: 17px; */
+
+
+/* position: relative; */
+
+
 /* } */
+
 
 /* #business_phone {
     position: relative;
